# games-monopoly

./: main.py  monopoly_official_rules.md  pyproject.toml
config/: porting.py  singleton.py
core/: singleton.py
main/classes/board/: board.py
main/classes/dice/: dice.py
main/classes/game/: game.py  player.py
main/classes/site/: sites.py
main/classes/street/: street.py
main/enum/: site_enums.py  street_enum.py
resources/: game_data.json  property_data.json  site_data.json
unittests/: all_tests.py  test_sites.py  test_streets.py
utils/data_parser/: data_parser.py
utils/web_scraper/: get_monopoly_data.py
