[project]
name = "monopoly"
version = "0.1.0"
description = ""
authors = [
    {name = "garyroberson",email = "gary.roberson@dimensionstudio.co"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-benchmark (>=5.1.0,<6.0.0)",
    "pygal (>=3.0.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
